@@ -243,6 +243,9 @@
 \alias{pruneBySdUndo}
 \alias{updateBoundaries}
 \alias{updateBoundaries.CBS}
+\alias{resegment}
+\alias{resegment.AbstractCBS}
+\alias{resegment.PairedPSCBS}
 
 \description{
   This page contains aliases for all "non-documented" objects that
